--- a/style.css
+++ b/style.css
@@ -56,7 +56,19 @@ body {
     color: black;
 }
 
-/* =================================================================FROM BOX */
+/* =======================================================INTRODUCTION */
+
+#introduction {
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-size: 17px;
+
+}
+
+/* ===========================================================FROM BOX */
 .classfy {
     display: grid;
     margin-top: 50px;
@@ -137,6 +149,7 @@ option {
     height: 250px;
     padding: 3px;
     object-fit: cover;
+    cursor: pointer;
 }
 
 #list .item .title {
@@ -173,7 +186,7 @@ option {
     height: 150px;
     top: 10px;
     left: 10px;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 /* ====================================================POPUP WINDOW */
@@ -181,15 +194,20 @@ option {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .6);
-    display: flex;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
 }
 
 #previewContainer .previewbox {
-    width: 320px;
-    height: 600px;
+    display: none;
+}
+
+#previewContainer .previewbox.active {
+    width: 350px;
+    height: 650px;
+    display: inline-block;
     background-color: white;
     position: relative;
     margin: auto;
@@ -221,6 +239,7 @@ option {
     line-height: 50px;
     font-size: 18px;
     border-radius: 0 0 0 20px;
+    cursor: pointer;
 }
 
 #previewContainer .previewbox h2 {
@@ -235,5 +254,5 @@ option {
 
 #previewContainer .previewbox .description {
     padding-left: 10px;
-    padding-rignt: 10px;
+    padding-right: 10px;
 }
