--- a/style.css
+++ b/style.css
@@ -20,6 +20,18 @@ body {
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
+    animation-duration: 2s;
+    animation-name: fadein01;
+}
+
+@keyframes fadein01 {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity : 1;
+    }
 }
 
 /* ======================================================================TOPBOX */
@@ -40,20 +52,22 @@ body {
     font-size: 35px;
     top: 20%;
     left: 10px;
+    color: white;
 }
 
 .buttonbox {
     position: absolute;
     font-size: 18px;;
-    width: 65px;
-    height: 20px;
+    width: 70px;
+    height: 25px;
     right: 5px;
     bottom: 5px;
     text-align: center;
-    line-height: 20px;
+    line-height: 25px;
     letter-spacing: 2px;
     background-color: darkgray;
     color: black;
+    font-weight: 600;
 }
 
 /* =======================================================INTRODUCTION */
@@ -64,14 +78,14 @@ body {
     padding: 10px;
     padding-top: 30px;
     padding-bottom: 30px;
-    font-size: 17px;
+    font-size: 20px;
 
 }
 
 /* ===========================================================FROM BOX */
 .classfy {
     display: grid;
-    margin-top: 50px;
+    margin-top: 60px;
     padding: 10px;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
@@ -99,6 +113,7 @@ body {
     display: block;
     width: 160px;
     padding: 0 1px;
+    font-size: 17px;
 }
 
 .classfy .item button {
@@ -112,18 +127,21 @@ option {
     font-family: 'Nanum Pen Script', cursive;
 }
 
+/* =========================================================COUNT RESULT */
+
 .countResults{
     width: 100%;
-    height: 40px;
+    height: 50px;
     background-color: #FFF100;
     font-size: 20px;
     text-align: center;
-    line-height: 45px;
+    line-height: 50px;
     padding: 0;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 50px;
     letter-spacing: 1px;
 }
+
 
 /* =========================================================LIST BOX */
 #list .item {
@@ -141,7 +159,14 @@ option {
 }
 
 #list .item {
-    background-color: #FCD8F9;
+    background-color: #FFF100;
+    
+}
+
+#list .item button {
+    color: black;
+    
+    
 }
 
 #list .item img {
@@ -150,6 +175,18 @@ option {
     padding: 3px;
     object-fit: cover;
     cursor: pointer;
+    animation-duration: 2s;
+    animation-name: fadein02;
+}
+
+@keyframes fadein02 {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity : 1;
+    }
 }
 
 #list .item .title {
@@ -165,6 +202,8 @@ option {
 
 
 
+
+
 /* ==========================================================FOOTER */
 .footer,
 .ilhyanginfo {
@@ -174,19 +213,20 @@ option {
 
 .footer {
     width: 100%;
-    height: 250px;
+    height: 370px;
     position: relative;
     margin-top: 80px;
-    background-color: lightgreen;
+    background-color: olivedrab;
 }
 
 .ilhyanginfo {
     position: absolute;
-    width: 65%;
+    width: 90%;
     height: 150px;
     top: 10px;
     left: 10px;
-    font-size: 15px;
+    font-size: 17px;
+    color: black;
 }
 
 /* ====================================================POPUP WINDOW */
@@ -212,7 +252,21 @@ option {
     position: relative;
     margin: auto;
     border-radius: 10px 10px 10px 10px;
+    animation-duration: 1s;
+    animation-name: fadein02;
 }
+
+@keyframes fadein02 {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity : 1;
+    }
+}
+
+
 
 #previewContainer .previewbox .preview {
     width: 100%;
@@ -237,7 +291,7 @@ option {
     background-color: olivedrab;
     text-align: center;
     line-height: 50px;
-    font-size: 18px;
+    font-size: 20px;
     border-radius: 0 0 0 20px;
     cursor: pointer;
 }
@@ -245,14 +299,16 @@ option {
 #previewContainer .previewbox h2 {
     text-align: center;
     font-weight: 500;
+    font-size: 30px;
 }
 
 #previewContainer .previewbox .flowersummary {
     text-align: center;
-    font-size: 13px;;
+    font-size: 18px;
 }
 
 #previewContainer .previewbox .description {
     padding-left: 10px;
     padding-right: 10px;
+    font-size: 20px;
 }
